Refactor index.html for improved structure and styling

--- a/index.html
+++ b/index.html
@@ -1,168 +1,155 @@
 <!doctype html>
 <html lang="pt-BR">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-  <title>LAILA — Chat Android</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>LAILA — Chat (mobile-safe)</title>
   <style>
-    :root {
-      --bg: #000000;
-      --bg-card: #121212;
-      --bg-input: #1e1e1e;
-      --text: #e0e0e0;
-      --text-muted: #999999;
-      --accent: #53d4b6;
-      --border: #2a2a2a;
-      --radius: 16px;
-      font-family: "Roboto", sans-serif;
+    :root{
+      --bg:#000;
+      --card:#0f0f0f;
+      --input:#171717;
+      --bubble-user:#2b2b2b;
+      --bubble-ai:#141414;
+      --text:#e7e7e7;
+      --muted:#8b8b8b;
+      --accent:#4bb39a;
+      --radius:14px;
+      font-family: Roboto, system-ui, -apple-system, "Segoe UI", "Helvetica Neue", Arial;
     }
-
-    *{box-sizing:border-box; margin:0; padding:0;}
-
-    html, body {
-      height: 100%;
-      background: var(--bg);
-      color: var(--text);
+    *{box-sizing:border-box;margin:0;padding:0}
+    html,body{height:100%;background:var(--bg);color:var(--text)}
+    body{display:flex;flex-direction:column;height:100vh}
+    .container{display:flex;flex-direction:column;flex:1;padding:8px}
+    .header{padding:10px 6px;border-bottom:1px solid #0a0a0a;display:flex;align-items:center;gap:12px}
+    .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(180deg,var(--accent),#2f9e86);display:flex;align-items:center;justify-content:center;color:#001; font-weight:700}
+    .title{font-size:16px}
+    .messages{flex:1;overflow:auto;padding:10px;display:flex;flex-direction:column;gap:8px}
+    .msg{max-width:78%;padding:10px 12px;border-radius:12px;word-break:break-word;line-height:1.35}
+    .msg.ai{align-self:flex-start;background:var(--bubble-ai);border:1px solid #1a1a1a}
+    .msg.user{align-self:flex-end;background:var(--bubble-user);border:1px solid #222}
+    .meta{font-size:12px;color:var(--muted);margin-top:6px}
+    .input-bar{display:flex;gap:8px;padding:10px;border-top:1px solid #0b0b0b;background:var(--card)}
+    textarea#input{flex:1;border-radius:12px;padding:10px;border:1px solid #232323;background:var(--input);color:var(--text);resize:none;height:50px;font-size:15px}
+    button#send{background:var(--accent);color:#001;border:none;padding:0 16px;border-radius:12px;font-weight:700;cursor:pointer}
+    .status{font-size:13px;color:var(--muted);padding:8px 6px;text-align:center}
+    @media(max-width:460px){
+      .title{font-size:14px}
+      textarea#input{height:46px;font-size:14px}
     }
-
-    body {
-      display: flex;
-      flex-direction: column;
-      font-size: 16px;
-    }
-
-    .chat-container {
-      display: flex;
-      flex-direction: column;
-      height: 100%;
-      padding: 8px;
-    }
-
-    .messages {
-      flex: 1;
-      overflow-y: auto;
-      padding: 8px;
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
-    }
-
-    .msg {
-      max-width: 75%;
-      padding: 10px 14px;
-      border-radius: var(--radius);
-      word-wrap: break-word;
-      line-height: 1.3;
-    }
-
-    .msg.user {
-      background: #2a2a2a;
-      align-self: flex-end;
-      color: var(--text);
-    }
-
-    .msg.ai {
-      background: #1e1e1e;
-      align-self: flex-start;
-      color: var(--text);
-    }
-
-    .msg .meta {
-      font-size: 12px;
-      color: var(--text-muted);
-      margin-top: 4px;
-    }
-
-    .input-area {
-      display: flex;
-      gap: 6px;
-      padding: 6px;
-      border-top: 1px solid var(--border);
-      background: var(--bg-card);
-    }
-
-    .input-area textarea {
-      flex: 1;
-      padding: 10px 12px;
-      border-radius: var(--radius);
-      border: 1px solid var(--border);
-      background: var(--bg-input);
-      color: var(--text);
-      font-size: 16px;
-      resize: none;
-      height: 48px;
-    }
-
-    .input-area button {
-      padding: 0 16px;
-      border-radius: var(--radius);
-      border: none;
-      background: var(--accent);
-      color: #000;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    @media(max-width:480px){
-      .input-area textarea { font-size:14px; height:42px; }
-      .input-area button { padding:0 12px; font-size:14px; }
-    }
-
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div class="messages" id="messages" role="log" aria-live="polite"></div>
+  <div class="container" role="application" aria-label="Chat Laila">
+    <div class="header">
+      <div class="logo">L</div>
+      <div>
+        <div class="title">LAILA — Chat</div>
+        <div style="font-size:12px;color:var(--muted)">Modo sombra ativo — espelho brutal disponível</div>
+      </div>
+    </div>
 
-    <div class="input-area">
-      <textarea id="chatInput" placeholder="Escreva sua mensagem..."></textarea>
-      <button id="sendBtn">Enviar</button>
+    <div id="messages" class="messages" role="log" aria-live="polite"></div>
+
+    <div class="status" id="status">Pronto.</div>
+
+    <div class="input-bar">
+      <textarea id="input" placeholder="Escreva sua mensagem... (ex: 'Devo enviar esse e-mail?')"></textarea>
+      <button id="send">Enviar</button>
     </div>
   </div>
 
 <script>
   const messagesEl = document.getElementById('messages');
-  const chatInput = document.getElementById('chatInput');
-  const sendBtn = document.getElementById('sendBtn');
+  const inputEl = document.getElementById('input');
+  const sendBtn = document.getElementById('send');
+  const statusEl = document.getElementById('status');
 
-  function appendMessage(text, who='ai', meta='') {
-    const el = document.createElement('div');
-    el.className = 'msg ' + (who==='user' ? 'user' : 'ai');
-    el.innerHTML = `<div>${escapeHtml(text)}</div>` + (meta?`<div class="meta">${escapeHtml(meta)}</div>`:'');
-    messagesEl.appendChild(el);
+  function escapeHtml(s){ return (s+'').replace(/[&<>\"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','\"':'&quot;',\"'\":\"&#39;\"})[c]); }
+
+  function pushMessage(text, who='ai', meta=''){
+    const d = document.createElement('div');
+    d.className = 'msg ' + (who==='user'?'user':'ai');
+    d.innerHTML = `<div>${escapeHtml(text)}</div>${meta?'<div class="meta">'+escapeHtml(meta)+'</div>':''}`;
+    messagesEl.appendChild(d);
     messagesEl.scrollTop = messagesEl.scrollHeight;
   }
 
-  function escapeHtml(s){ return (s+'').replace(/[&<>\"']/g, c=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;',"'":"&#39;"}[c])); }
+  function setStatus(t){ statusEl.textContent = t; }
 
-  async function sendChat(text) {
-    if(!text) return;
-    appendMessage(text, 'user');
-    chatInput.value='';
+  async function safeParseResponse(res){
+    // try content-type
+    const ct = res.headers.get('content-type') || '';
+    // if JSON-like type, attempt json
+    if(ct.includes('application/json')){
+      return await res.json();
+    }
+    // otherwise try text and attempt to JSON.parse if looks like JSON
+    const txt = await res.text();
     try{
-      const res = await fetch('/api/chat',{
-        method:'POST',
-        headers:{'Content-Type':'application/json'},
-        body: JSON.stringify({ action:'chat', text })
-      });
-      const j = await res.json();
-      const reply = j?.content || 'Sem resposta';
-      appendMessage(reply,'ai');
+      // quick heuristic: if starts with { or [ try parse
+      const trimmed = txt.trim();
+      if(trimmed.startsWith('{') || trimmed.startsWith('[')) return JSON.parse(trimmed);
     }catch(e){
-      appendMessage('Erro: '+e.message,'ai');
+      // swallow
+    }
+    // fallback: return object with rawText so UI can show it
+    return { rawText: txt, _status: res.status, _headers: Object.fromEntries(res.headers.entries()) };
+  }
+
+  async function send(){
+    const text = inputEl.value.trim();
+    if(!text) return;
+    pushMessage(text, 'user');
+    inputEl.value = '';
+    setStatus('Enviando...');
+    sendBtn.disabled = true;
+
+    try{
+      const resp = await fetch('/api/chat', {
+        method: 'POST',
+        headers: {'Content-Type':'application/json'},
+        body: JSON.stringify({ action: 'chat', text })
+      });
+
+      // debug logs in console for inspection
+      console.log('HTTP', resp.status, resp.statusText, Array.from(resp.headers.entries()));
+
+      const data = await safeParseResponse(resp);
+
+      // handle typical shapes
+      if(data && data.type === 'chat' && data.content){
+        pushMessage(String(data.content), 'ai');
+        setStatus('Resposta recebida');
+      } else if(data && data.type === 'strategy' && data.mirror){
+        const out = `Espelho: ${data.mirror}\nCenários: ${data.scenarios ? data.scenarios.map(s=>s.label+': '+Math.round(s.prob*100)+'%').join(' / '):''}`;
+        pushMessage(out,'ai');
+        setStatus('Estratégia sugerida');
+      } else if(data && data.rawText){
+        // server returned plain text (e.g. error or message) — show it
+        pushMessage(String(data.rawText), 'ai', `HTTP ${data._status}`);
+        setStatus('Resposta em texto bruto do servidor');
+        console.warn('Server raw response headers:', data._headers);
+      } else {
+        // generic fallback
+        pushMessage(JSON.stringify(data), 'ai');
+        setStatus('Resposta (formato inesperado)');
+      }
+    }catch(err){
+      console.error('Fetch/parsing error', err);
+      pushMessage('Erro: '+err.message, 'ai');
+      setStatus('Erro na requisição — veja console');
+    }finally{
+      sendBtn.disabled = false;
     }
   }
 
-  sendBtn.addEventListener('click', ()=> sendChat(chatInput.value.trim()));
-  chatInput.addEventListener('keydown', e=>{
-    if(e.key==='Enter' && !e.shiftKey){
-      e.preventDefault();
-      sendBtn.click();
-    }
-  });
+  sendBtn.addEventListener('click', send);
+  inputEl.addEventListener('keydown', e=>{ if(e.key==='Enter' && !e.shiftKey){ e.preventDefault(); send(); }});
 
-  // Greeting
-  appendMessage('Laila online — pronta para conversar.','ai');
+  // greeting
+  pushMessage('Laila online — pronta.', 'ai');
+
 </script>
 </body>
 </html>
